--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <!-- Anchor element -->
                     <a href="#what-we-do">What We Do</a>
                 </li>
-                <li>
+                <li> 
                     <a href="#what-you-do">What You Do</a>
                 </li>
                 <li>
@@ -99,83 +99,117 @@
 
     <!-- "what you do" section -->
     <section id ="what-you-do" class="steps">
-        <div>
-            <h2 class="section-title secondary-border">What You Do</h2>
-        </div>
-        <div>
-            <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
-        </div>
-
-        <div>
-            <img src="./assets/images/step-2.svg" alt="" />
-            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
-        </div>
-
-        <div>
-            <img src="./assets/images/step-3.svg" alt="" />
-            <h3>Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan</p>
-        </div>
-
-        <div>
-            <img src="./assets/images/step-4.svg" alt="" />
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
-        </div>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2> 
+          </div>
+          <div class="step">
+            <h3>Step 1.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-1.svg" alt="Computer Illustration With User Icon on Screen" />
+              </div>
+              <div class="step-text">
+                <h4>Fill Out The Form Above</h4>
+                <p>You're already here, so why not?</p>
+              </div>
+            </div>
+          </div>
+          <div class="step">
+            <h3>Step 2.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-2.svg" alt="Text Bubble Illustration" />
+              </div>
+              <div class="step-text">
+                <h4>Consult With One Of Our Trainers</h4>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+              </div>
+            </div>
+          </div>
+          <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-3.svg" alt="Illustration of Running Shoe" />
+              </div>
+              <div class="step-text">
+                <h4>Get Running</h4>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+              </div>
+            </div>
+          </div>
+          <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+              <div class="step-img">
+                <img src="./assets/images/step-4.svg" alt="Illustration of a Strong Person With Stars" />
+              </div>
+              <div class="step-text">
+                <h4>See Results</h4>
+                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+              </div>
+            </div>
+          </div>
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
-        <article class="trainer">
-            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi 
-                    neque animi quo cupiditate commodi saepe culpa sed itaque velit 
-                    maiores optio dolorem excepturi aperiam dolores, voluptatibus 
-                    suscipit amet quis repellat!    
-                </p>
-            </div>
-        </article>
-
-    <!-- second trainer bio -->
-    <article class="trainer">
-        <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi 
-                neque animi quo cupiditate commodi saepe culpa sed itaque velit 
-                maiores optio dolorem excepturi aperiam dolores, voluptatibus 
-                suscipit amet quis repellat!
-            </p>
+    <section id="your-trainers">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
         </div>
-        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-    </article>
+        <!-- first trainer bio -->
+        <div class="trainers">
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class ="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi 
+                        neque animi quo cupiditate commodi saepe culpa sed itaque velit 
+                        maiores optio dolorem excepturi aperiam dolores, voluptatibus 
+                        suscipit amet quis repellat!    
+                    </p>
+                </div>
+            </article>
 
-    <!-- third trainer bio -->
-    <article class="trainer">
-        <img src="./assets/images/trainer-3.jpg" 
-            alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-        <div class="trainer-bio text-left">
-            <h3>Harry "the Headband" Smith</h3>
-            <h4>Strength</h4>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa 
-                sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum delectus et blanditiis, exercitationem numquam rerum dignissimos esse voluptate dolorum. Provident molestias molestiae perspiciatis ipsam adipisci, temporibus facilis unde ea fugiat?
-            </p>
+        <!-- second trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class ="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi 
+                        neque animi quo cupiditate commodi saepe culpa sed itaque velit 
+                        maiores optio dolorem excepturi aperiam dolores, voluptatibus 
+                        suscipit amet quis repellat!    
+                    </p>
+                </div>
+            </article>
+
+        <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class ="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi 
+                        neque animi quo cupiditate commodi saepe culpa sed itaque velit 
+                        maiores optio dolorem excepturi aperiam dolores, voluptatibus 
+                        suscipit amet quis repellat!    
+                    </p>
+                </div>
+            </article>
         </div>
-    </article>
-</section>
+    </section>
 
     <!-- "reach out"-->
     <section id="reach-out" class="contact">
+        <div class="flex-row">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe
