--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <input type="radio" name="trainer-confirm" id="trainer-yes" />
                                 <label for="trainer-yes">Yes</label>
                             <span class="radio-wrapper">
-                                <input type="radio" name="trainer-confirm" id="trainer=no" />
+                                <input type="radio" name="trainer-confirm" id="trainer-no" />
                                 <label for="trainer-no">No</label>
                             </span>
                         </p>
